Fixes #12603 !strict. Added text-align:left.
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@24232 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/mobile/themes/common/Switch.css
+++ b/mobile/themes/common/Switch.css
@@ -4,6 +4,7 @@
 	width: 94px;
 	height: 27px;
 	overflow: hidden;
+	text-align: left;
 }
 .mblItemSwitch {
 	position: absolute;
